--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,3 +31,24 @@ p {
 #article-content p {
     @apply mt-0 opacity-90;
 }
+
+#article-content img {
+    @apply my-6 rounded;
+}
+
+#article-content ul {
+    @apply list-disc;
+}
+
+#article-content ol {
+    @apply list-decimal;
+}
+
+#article-content ol,
+#article-content ul {
+    @apply my-4 ml-4;
+}
+
+#article-content pre {
+    @apply relative my-4 rounded p-4;
+}
