--- a/src/components/BlogArticle.astro
+++ b/src/components/BlogArticle.astro
@@ -4,7 +4,7 @@ import Tag from './ui/Tag.astro';
 
 
 type Props = {
-  article: CollectionEntry<'articles'>;
+  article: CollectionEntry<'blog'>;
 }
 
 const { article } = Astro.props as Props;
