--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -6,7 +6,7 @@ import Tag from "@/components/ui/Tag.astro";
 
 
 export async function getStaticPaths() {
-  const articles = await getCollection("articles");
+  const articles = await getCollection("blog");
 
   return articles.map((article) => ({
     params: { id: article.id },
