--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import BlogArticle from "@/components/BlogArticle.astro";
 import { getCollection } from "astro:content";
 
-const articles = await getCollection("articles");
+const articles = await getCollection("blog");
 
 ---
 
