--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
 import BlogArticle from '@/components/BlogArticle.astro';
 
 const projects = await getCollection('projects');
-const articles = await getCollection('articles');
+const articles = await getCollection('blog');
 
 ---
 
