(feat) : add a quick 404 page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const year = new Date().getFullYear();
 </footer>
 
 <script>
-  import { toggleTheme, checkSavedTheme ,saveThemeChoice } from "../../src/utils/theme";
+  import { toggleTheme ,saveThemeChoice } from "../../src/utils/theme";
 
   document.addEventListener('astro:page-load', () => {
     const themeSwitcherElem = document.getElementById('themeSwitcher');
