(refactor) : change the blog collection to make more clear if an article is published or not

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import LauncherButton from "./Launcher/LauncherButton.astro";
           <LauncherButton />
         </li>
         <li class="p-1">
-          <a href="/about" aria-label="Aller sur la page a propos">
+          <a href="/a-propos" aria-label="Aller sur la page a propos">
             <span>A propos</span>
           </a>
         </li>
