--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import BlogArticle from "@/components/BlogArticle.astro";
+import BlogCard from "@/components/BlogCard.astro";
 import { getCollection } from "astro:content";
 
 const articles = await getCollection("blog");
@@ -13,7 +13,7 @@ const articles = await getCollection("blog");
   
   <div class="group mt-12 sm:mt-16">
     {articles.map((article) => (
-      <BlogArticle article={article} />
+      <BlogCard article={article} />
     ))}
 	</div>
 </Layout>
