--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -9,7 +9,7 @@ type Props = {
 
 const { article } = Astro.props as Props;
 
-const { title, date, tags, state } = article.data;
+const { title, date, tags, published } = article.data;
 
 const formatedDate = new Date(date).toLocaleDateString("fr-FR");
 
@@ -18,7 +18,7 @@ const formatedDate = new Date(date).toLocaleDateString("fr-FR");
 <article class="relative isolate flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102">
   <div class="flex-1">
     <h3>
-      {state === 'published' ? (
+      {published ? (
             <a href={`/blog/${article.id}`}>
                   <span class="absolute inset-0 z-10"></span>
                   {title}
@@ -33,7 +33,7 @@ const formatedDate = new Date(date).toLocaleDateString("fr-FR");
       ))}
     </div>
   </div>
-  {state === 'published' ? (
+  {published ? (
     <time datetime={formatedDate} class="text-sm"><span>{formatedDate}</span></time>
   ) : (
     <span class="text-sm text-neutral-500">Bientôt disponible</span>
