--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { getCollection } from 'astro:content';
 import Layout from '@/layouts/Layout.astro';
 import SocialLinks from '@/components/SocialLinks.astro';
 import ProjectCard from '@/components/ProjectCard.astro';
-import BlogArticle from '@/components/BlogArticle.astro';
+import BlogCard from '@/components/BlogCard.astro';
 
 const projects = await getCollection('projects');
 const articles = await getCollection('blog');
@@ -31,7 +31,7 @@ const articles = await getCollection('blog');
 		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
 		<div class="group">
 			{articles.map((article) => (
-				<BlogArticle article={article} />
+				<BlogCard article={article} />
 			))}
 		</div>
 	</div>
