--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,10 @@ import Layout from "@/layouts/Layout.astro";
 
 ---
 
-<Layout>
+<Layout
+  title="404・Page non trouvée" 
+  metaDescription="Page non trouvée."
+>
   <h1 class="text-2xl">404</h1>
 	<h2 class="text-neutral-500">Page non trouvée</h2>
   <p class="text-sm">La page que vous essayer de trouver n'existe pas. Cette page est autant perdu que vous.</p>
