--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -12,7 +12,12 @@ const experiences = await getCollection('experiences');
 
 ---
 
-<Layout>
+<Layout 
+  title="A propos ・Victor Lebecq" 
+  metaTitle="A propos・Victor Lebecq" 
+  metaDescription="Développeur web base à Chambéry qui aime donner vie à des projets impactant et durables."
+>
+
   <h1 class="text-2xl">A propos</h1>
 	<h2 class="text-neutral-500">Actuellement à Grenoble</h2>
 	<p>
