--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,11 @@ const articles = await getCollection('blog');
 
 ---
 
-<Layout>
+<Layout
+	title="Victor Lebecq・Développeur web à Chambéry et Grenoble"
+	metaTitle="Victor Lebecq・Développeur web à Chambéry et Grenoble" 
+  metaDescription="Développeur web base à Chambéry qui aime donner vie à des projets impactant et durables."
+>
 	<h1 class="text-2xl">Victor Lebecq</h1>
 	<h2 class="text-neutral-500">Développeur web @ <a href="https://digit-alp.fr" target="_blank" class="transition-colors ease-out duration-300 hover:text-neutral-900 dark:hover:text-neutral-100">Digit'Alp</a> </h2>
 	<p>
