--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -23,11 +23,15 @@ const { Content } = await render(article);
 
 const { title, date, tags } = article.data;
 
-const formatedDate = date.toLocaleString('fr');
+const formatedDate = new Date(date).toLocaleDateString("fr-FR");
 
 ---
 
-<Layout>
+<Layout
+  title={`${title}・Victor Lebecq`}
+  metaTitle={`${title}・Victor Lebecq`}
+  metaDescription="TODO : Add a meta description to the articles"
+>
   <h1 class="text-2xl">{title}</h1>
 	<h4 class="text-neutral-500">Publié le {formatedDate}</h4>
   <ul class="space-x-2 mt-2">
