--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,11 @@ const articles = await getCollection("blog");
 
 ---
 
-<Layout>
+<Layout
+  title="Blog・Victor Lebecq"
+  metaTitle="Blog・Victor Lebecq"
+  metaDescription="Bienvenue sur mon blog, un endroit ou je documente et partage ma veille ainsi que mon activité de freelance dans le développement web."
+>
   <h1 class="text-2xl">Blog</h1>
 	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
   
