(feat) : add a really simple read me for the project

--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -38,7 +38,7 @@ const { title, metaTitle, metaDescription } = Astro.props
   {
     "@context": "https://schema.org/",
     "@type": "Product",
-    "name": "Victor Lebecq",
+    "name": "Victor Lebecq - Développeur web à Chambéry et Grenoble",
     "aggregateRating": {
       "@type": "AggregateRating",
       "ratingValue": "5",
