--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,8 +16,6 @@ type Props = {
 
 const { title, metaTitle, metaDescription } = Astro.props as Props;
 
-
-
 ---
 
 <!doctype html>
@@ -37,12 +35,12 @@ const { title, metaTitle, metaDescription } = Astro.props as Props;
 		<ClientRouter />
 	</head>
 
-	<body 
+	<body
 		data-theme="dark"
 		data-modal="close"
 		class="bg-neutral-100 font-sans font-medium text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100 overflow-auto data-[modal=open]:overflow-hidden data-[modal=open]:overscroll-contain data-[modal=open]:pointer-events-none data-[modal=open]:!mr-[15px]"
 	>
-		<div class="mx-auto max-w-3xl overflow-x-hidden px-6 pt-12 antialiased sm:pt-16 md:overflow-x-visible">
+		<div class="mx-auto max-w-3xl overflow-x-hidden px-4 pt-12 antialiased sm:px-6 sm:pt-16 md:overflow-x-visible">
 			<Header />
 			<slot />
 			<Footer />
@@ -57,6 +55,3 @@ const { title, metaTitle, metaDescription } = Astro.props as Props;
 		});
 	</script>
 </html>
-
-
-
