--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const articles = await getCollection('blog');
 
 <Layout
 	title="Victor Lebecq・Développeur web à Chambéry et Grenoble"
-	metaTitle="Victor Lebecq・Développeur web à Chambéry et Grenoble" 
+	metaTitle="Victor Lebecq・Développeur web à Chambéry et Grenoble"
   metaDescription="Développeur web base à Chambéry qui aime donner vie à des projets impactant et durables."
 >
 	<h1 class="text-2xl">Victor Lebecq</h1>
@@ -22,7 +22,7 @@ const articles = await getCollection('blog');
 		Développeur web freelance de 25 ans basé à Chambéry, je travail principalement avec <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> et <strong class="font-medium">AstroJS</strong>. J'aime découper des problèmes et trouver des solutions pour donner vie à des projets impactant et durables pour mes clients.
 	</p>
 	<SocialLinks />
-	
+
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
 		<div class="group">
@@ -39,5 +39,11 @@ const articles = await getCollection('blog');
 			))}
 		</div>
 	</div>
-	
+
+	<div class="mt-12 sm:mt-16">
+        <h2 class="text-neutral-500 mb-6">[ Catch me if you can ]</h2>
+        <p>Une question ? Un projet ? Trouvez moi sur mes différents réseaux ou par <a href="mailto:victor.lebecq.pro@gmail.com" class="font-bold">mail</a>.</p>
+        <SocialLinks />
+	</div>
+
 </Layout>
