--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
 import BlogCard from '@/components/BlogCard.astro';
 
 const projects = await getCollection('projects');
-const articles = await getCollection('blog');
-
+const articles = await getCollection("blog", ({ data }) => data.published === true);
 ---
 
 <Layout
