--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -1,6 +1,7 @@
 ---
+import Schemas from './Schemas.astro';
+
 import ogImage from '@/../public/assets/images/og-image.png';
-import Breadcrumb from './ui/Breadcrumb.astro';
 
 type Props = {
   title: string;
@@ -48,4 +49,4 @@ const { title, metaTitle, metaDescription } = Astro.props
   }
 </script>
 
-<Breadcrumb />
+<Schemas />
