--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import Footer from '../components/Footer.astro';
 import Launcher from '@/components/Launcher/Launcher.astro';
 import Seo from '@/components/Seo.astro';
 
+import { getLangFromUrl } from '../i18n/utils';
 import '../styles/global.css';
 
 type Props = {
@@ -16,10 +17,12 @@ type Props = {
 
 const { title, metaTitle, metaDescription } = Astro.props as Props;
 
+const lang = getLangFromUrl(Astro.url);
+
 ---
 
 <!doctype html>
-<html lang="fr">
+<html lang={lang}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
