(fix) : translated routes are now working

--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -5,10 +5,10 @@ import { getLangFromUrl, useTranslatedPath } from '../i18n/utils';
 const lang = getLangFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
 ---
-<ul>
+<ul class="flex gap-1 uppercase">
   {Object.entries(languages).map(([lang, label]) => (
     <li>
-      <a href={translatePath('/', lang)}>{label}</a>
+      <a href={translatePath('/', lang)}>{lang}</a>
     </li>
   ))}
 </ul>
