--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const translatePath = useTranslatedPath(lang);
 ---
 <header class="mb-16 sm:mb-32">
   <div class="flex items-center justify-between">
-    <a href={translatePath('/')} class="">
+    <a href={translatePath('/', lang)} class="">
       <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
     </a>
     <nav>
@@ -22,12 +22,12 @@ const translatePath = useTranslatedPath(lang);
           <LauncherButton />
         </li>
         <li class="p-1">
-          <a href={translatePath('/a-propos', lang)} aria-label="Aller sur la page a propos">
-            <span>{t('nav.about')}</span>
-          </a>
+            <a href={translatePath('/a-propos/', lang)} aria-label="Aller sur la page a propos">
+              <span>{t('nav.about')}</span>
+            </a>
         </li>
         <li class="p-1">
-          <a href={translatePath('/blog/')} aria-label="Aller sur le blog">
+          <a href={translatePath('/blog/', lang)} aria-label="Aller sur le blog">
             <span>Blog</span>
           </a>
         </li>
