(feat) : make the i18n feature work propetly for blog collection

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,24 +1,27 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import Tag from './ui/Tag.astro';
+import { getLangFromUrl, useTranslations, useTranslatedPath } from '../i18n/utils';
 
+import Tag from './ui/Tag.astro';
 
 type Props = {
   article: CollectionEntry<'blog'>;
 }
 
 const { article } = Astro.props as Props;
+const { title, publishingDate, tags, href } = article.data;
+const formatedDate = new Date(publishingDate).toLocaleDateString("fr-FR");
 
-const { title, date, tags } = article.data;
-
-const formatedDate = new Date(date).toLocaleDateString("fr-FR");
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const translatePath = useTranslatedPath(lang);
 
 ---
 
 <article class="relative isolate flex items-center rounded-xl p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 group-hover:has-hover:scale-102">
   <div class="flex-1">
     <h3>
-        <a href={`/blog/${article.id}`}>
+        <a href={translatePath(`/blog/${href}`, lang)}>
                 <span class="absolute inset-0 z-10"></span>
                 {title}
         </a>
