(style) : accord the languagepicker component to the footer style

--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -1,5 +1,5 @@
 ---
-import { languages, supportedLanguages } from '../i18n/ui';
+import { languages } from '../i18n/ui';
 import { getLangFromUrl, getRouteFromUrl,  useTranslatedPath } from '../i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
@@ -7,10 +7,13 @@ const route = getRouteFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
 
 ---
-<ul class="flex gap-1 uppercase">
-  {Object.entries(languages).map(([lang, label]) => (
-    <li>
-      <a href={translatePath(`/${route ? route : ''}`, lang)}>{lang}</a>
-    </li>
-  ))}
+<ul class="flex gap-1 uppercase text-sm">
+  [ {Object.entries(languages).map(([lang, label], index) => (
+    <>
+      <li>
+        <a href={translatePath(`/${route ? route : ''}`, lang)} class="hover:text-neutral-100 transition-colors ease-out">{lang}</a>
+      </li>
+      {index < Object.entries(languages).length - 1 && ' / '}
+    </>
+  ))} ]
 </ul>
