--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -7,7 +7,7 @@ const route = getRouteFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
 
 ---
-<ul class="flex gap-1 uppercase text-sm">
+<ul class="flex gap-1 uppercase">
   [ {Object.entries(languages).map(([lang, label], index) => (
     <>
       <li>
