--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,15 +1,19 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 
+import { getLangFromUrl, useTranslations, useTranslatedPath } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const translatePath = useTranslatedPath(lang);
 
 ---
 
 <Layout
-  title="404・Page non trouvée" 
-  metaDescription="Page non trouvée."
+  title={t("404.seo.title")}
 >
-  <h1 class="text-2xl">404</h1>
-	<h2 class="text-neutral-500">Page non trouvée</h2>
-  <p class="text-sm">La page que vous essayer de trouver n'existe pas. Cette page est autant perdu que vous.</p>
-  <a href="/" class="inline-block mt-6 text-sm underline">Retourner à l'accueil</a>
+    <h1 class="text-2xl">{t("404.title")}</h1>
+  <h2 class="text-neutral-500">{t("404.subtitle")}</h2>
+  <p class="text-sm">{t("404.text")}</p>
+  <a href={translatePath('/', lang)} class="inline-block mt-6 text-sm underline">{t("404.link")}</a>
 </Layout>
