--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,23 +1,23 @@
 ---
-import { getLangFromUrl } from '@/i18n/utils';
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 import { getBlogCollection } from '@/utils/collections';
 
 import Layout from "@/layouts/Layout.astro";
 import BlogCard from "@/components/BlogCard.astro";
 
 const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 
 const articles = await getBlogCollection(lang);
 
 ---
 
 <Layout
-  title="Blog・Victor Lebecq"
-  metaTitle="Blog・Victor Lebecq"
-  metaDescription="Bienvenue sur mon blog, un endroit ou je documente et partage ma veille ainsi que mon activité de freelance dans le développement web."
+  title={t("blog.seo.title")}
+  metaDescription={t("blog.seo.description")}
 >
-  <h1 class="text-2xl">Blog</h1>
-	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
+  <h1 class="text-2xl">{t("blog.title")}</h1>
+	<h2 class="text-neutral-500">{t("blog.subTitle")}</h2>
 
   <div class="group mt-12 sm:mt-16">
     {articles.map((article) => (
