--- a/src/pages/en/blog/index.astro
+++ b/src/pages/en/blog/index.astro
@@ -1,27 +1,5 @@
 ---
-import { getLangFromUrl } from '@/i18n/utils';
-import { getBlogCollection } from '@/utils/collections';
-
-import Layout from "@/layouts/Layout.astro";
-import BlogCard from "@/components/BlogCard.astro";
-
-const lang = getLangFromUrl(Astro.url);
-
-const articles = await getBlogCollection(lang);
-
+import Page from "../../blog/index.astro";
 ---
 
-<Layout
-  title="Blog・Victor Lebecq"
-  metaTitle="Blog・Victor Lebecq"
-  metaDescription="Bienvenue sur mon blog, un endroit ou je documente et partage ma veille ainsi que mon activité de freelance dans le développement web."
->
-  <h1 class="text-2xl">Blog</h1>
-	<h2 class="text-neutral-500">Je documente ma veille et mon activité de freelance</h2>
-
-  <div class="group mt-12 sm:mt-16">
-    {articles.map((article) => (
-      <BlogCard article={article} />
-    ))}
-	</div>
-</Layout>
+<Page />
