(fix) : header use the new i18n transllation method

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,12 +22,12 @@ const translatePath = useTranslatedPath(lang);
         </li>
         <li class="p-1">
             <a href={translatePath('/a-propos/', lang)} aria-label="Aller sur la page a propos">
-              <span>{t('nav.about')}</span>
+              <span>{t('common.nav.about')}</span>
             </a>
         </li>
         <li class="p-1">
           <a href={translatePath('/blog/', lang)} aria-label="Aller sur le blog">
-            <span>Blog</span>
+            <span>{t('common.nav.blog')}</span>
           </a>
         </li>
       </ul>
