about page is now translated with i18n

--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,49 +1,5 @@
 ---
-import { Image } from "astro:assets";
-import { getCollection } from "astro:content";
-
-import Layout from "@/layouts/Layout.astro";
-import WorkExperience from "@/components/WorkExperience.astro";
-
-import image from "@/assets/about.jpg";
-
-const experiences = await getCollection('experiences');
-
+import Page from "../a-propos.astro";
 ---
 
-<Layout
-	title="About ・Victor Lebecq"
-	metaTitle="About・Victor Lebecq"
-	metaDescription="Web developer based in Chambéry who loves bringing impactful and sustainable projects to life."
->
-	<h1 class="text-2xl">About me</h1>
-	<h2 class="text-neutral-500">Currently in Grenoble</h2>
-	<p>
-		Ever since I was little, I've loved building things, whether with code or with my hands. When I encounter a problem, I want to find a solution. Today I put this desire to work for my clients by developing digital solutions that meet their needs.
-	</p>
-	<p>
-		When I'm not coding, I'm probably exploring the Alps on skis or on foot.
-	</p>
-	<Image src={image} alt="About" width="1280" height="720" class="mt-6 rounded" />
-
-	<div class="space-y-2 mt-12 sm:mt-16">
-  		<h2 class="text-neutral-500 mb-6">[ Experience ]</h2>
-  		{experiences.map((experience) => (
-				<WorkExperience experience={experience} />
-  		))}
-	</div>
-
-	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500 mb-6">[ Tech ]</h2>
-		<p class="">
-			Currently I mainly work with <strong class="font-medium">Wordpress</strong> or JavaScript frameworks like <strong class="font-medium">React</strong> or recently <strong class="font-medium">AstroJS</strong> which I particularly appreciate for its DX (Developer Experience). For styling, after creating my mockups in Figma, I like using <strong class="font-medium">TailwindCSS</strong> for its simplicity and efficiency.
-		</p>
-		<p class="">
-			Before each project start, I select the technology that will most effectively meet my needs, while minimizing (as much as possible) the project's impact on our beautiful planet.
-		</p>
-		<div class="flex items-center text-sm text-green-700 dark:text-green-400  gap-2 mt-6 w-fit px-3 py-2">
-			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="-ml-3"><path d="M7 20h10"/><path d="M10 20c5.5-2.5.8-6.4 3-10"/><path d="M9.5 9.4c1.1.8 1.8 2.2 2.3 3.7-2 .4-3.5.4-4.8-.3-1.2-.6-2.3-1.9-3-4.2 2.8-.5 4.4 0 5.5.8z"/><path d="M14.1 6a7 7 0 0 0-1.1 4c1.9-.1 3.3-.6 4.3-1.4 1-1 1.6-2.3 1.7-4.6-2.7.1-4 1-4.9 2z"/></svg>
-			<span>This site generates 0.07g of CO2 per visit.</span>
-		</div>
-	</div>
-</Layout>
+<Page />
