--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
+import { getLangFromUrl, useTranslations, useTranslatedPath } from '../i18n/utils';
 
 import Layout from "@/layouts/Layout.astro";
 import WorkExperience from "@/components/WorkExperience.astro";
@@ -9,42 +10,37 @@ import image from "@/assets/about.jpg";
 
 const experiences = await getCollection('experiences');
 
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+
+
 ---
 
 <Layout
-  title="A propos ・Victor Lebecq"
-  metaTitle="A propos・Victor Lebecq"
-  metaDescription="Développeur web base à Chambéry qui aime donner vie à des projets impactant et durables."
+  title={t("about.seo.title")}
+  metaDescription={t("about.seo.description")}
 >
 
-  <h1 class="text-2xl">A propos</h1>
-	<h2 class="text-neutral-500">Actuellement à Grenoble</h2>
-	<p>
-    Depuis tout petit, j'aime construire des choses, que ce soit avec du code ou avec mes mains. Quand je rencontre un problème, je veux lui trouver une solution. Aujourd'hui je met cette envie au service de mes clients en développant des solutions digitales venant répondre à leurs besoins.
-	</p>
-  <p>
-    Quand je ne suis pas entrain de coder, je suis probablement entrain d'explorer les alpes à ski ou à pieds.
-  </p>
-  <Image src={image} alt="About" width="1280" height="720" class="mt-6 rounded" />
+  <h1 class="text-2xl">{t("about.title")}</h1>
+	<h2 class="text-neutral-500">{t("about.subTitle")}</h2>
+	<p>{t("about.text1")}</p>
+  <p>{t("about.text2")}</p>
+  <Image src={image} alt={t("about.imageAlt")} width="1280" height="720" class="mt-6 rounded" />
 
   <div class="space-y-2 mt-12 sm:mt-16">
-    <h2 class="text-neutral-500 mb-6">[ Experiences ]</h2>
+    <h2 class="text-neutral-500 mb-6">[ {t("about.experience.title")} ]</h2>
     {experiences.map((experience) => (
       <WorkExperience experience={experience} />
     ))}
 	</div>
 
   <div class="mt-12 sm:mt-16">
-    <h2 class="text-neutral-500 mb-6">[ Technos ]</h2>
-		<p class="">
-      Actuellement je travail principalement avec <strong class="font-medium">Wordpress</strong> ou des frameworks javascript comme <strong class="font-medium">React</strong> ou recemment <strong class="font-medium">AstroJS</strong> dont j'apprecie tout particulièrement la DX (Developer Experience). Pour le styling, après avoir élaborer mes maquettes sur Figma, j'aime utiliser <strong class="font-medium">TailwindCSS</strong> pour sa simplicité et son efficacité.
-    </p>
-    <p class="">
-      Avant chaque démarrage, je sélectionne la technologie qui répondra le plus efficacement à mes besoins, tout en minimisant (le plus possible) l'impact du projet sur notre belle planète.
-    </p>
+    <h2 class="text-neutral-500 mb-6">[ {t("about.tech.title")} ]</h2>
+		<p class="">{t("about.tech.text1")} </p>
+    <p class="">{t("about.tech.text2")}</p>
     <div class="flex items-center text-sm text-green-700 dark:text-green-400  gap-2 mt-6 w-fit px-3 py-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="-ml-3"><path d="M7 20h10"/><path d="M10 20c5.5-2.5.8-6.4 3-10"/><path d="M9.5 9.4c1.1.8 1.8 2.2 2.3 3.7-2 .4-3.5.4-4.8-.3-1.2-.6-2.3-1.9-3-4.2 2.8-.5 4.4 0 5.5.8z"/><path d="M14.1 6a7 7 0 0 0-1.1 4c1.9-.1 3.3-.6 4.3-1.4 1-1 1.6-2.3 1.7-4.6-2.7.1-4 1-4.9 2z"/></svg>
-      <span>Ce site génère 0.07g de C02 par visite.</span>
+      <span>{t("about.tech.siteCarbon")}</span>
     </div>
 	</div>
 
