(fix) : english version of home now use the right template

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,51 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
-import { getBlogCollection } from '@/utils/collections';
-import { getLangFromUrl } from '@/i18n/utils';
-
-import Layout from '@/layouts/Layout.astro';
-import SocialLinks from '@/components/SocialLinks.astro';
-import ProjectCard from '@/components/ProjectCard.astro';
-import BlogCard from '@/components/BlogCard.astro';
-
-const lang = getLangFromUrl(Astro.url);
-
-const projects = await getCollection('projects');
-const articles = await getBlogCollection(lang);
+import Page from "../index.astro";
 ---
 
-<Layout
-	title="Victor Lebecq・Web Developer in Chambéry and Grenoble"
-	metaTitle="Victor Lebecq・Web Developer in Chambéry and Grenoble"
-	metaDescription="Web developer based in Chambéry who loves bringing impactful and sustainable projects to life."
->
-	<h1 class="text-2xl">Victor Lebecq</h1>
-	<h2 class="text-neutral-500">Web Developer @ <a href="https://digit-alp.fr" target="_blank" class="transition-colors ease-out duration-300 hover:text-neutral-900 dark:hover:text-neutral-100">Digit'Alp</a> </h2>
-	<p>
-		25-year-old freelance web developer based in Chambéry, I mainly work with <strong class="font-medium">React</strong>, <strong class="font-medium">Wordpress</strong> and <strong class="font-medium">AstroJS</strong>. I love breaking down problems and finding solutions to bring impactful and sustainable projects to life for my clients.
-	</p>
-
-	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500 mb-6">[ Projects ]</h2>
-		<div class="group">
-			{projects.map((project) => (
-				<ProjectCard title={project.data.title} description={project.data.description} link={project.data.link} />
-			))}
-		</div>
-	</div>
-	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500 mb-6">[ Blog ]</h2>
-		<div class="group">
-			{articles.map((article) => (
-				<BlogCard article={article} />
-			))}
-		</div>
-	</div>
-
-	<div class="mt-12 sm:mt-16">
-		<h2 class="text-neutral-500 mb-6">[ Catch me if you can ]</h2>
-		<p>Have a question? A project? Find me on my social networks or by <a href="mailto:victor.lebecq.pro@gmail.com" class="font-bold">email</a>.</p>
-		<SocialLinks />
-	</div>
-
-</Layout>
+<Page />
