--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -5,6 +5,7 @@ import type { CollectionEntry } from "astro:content";
 import Layout from "@/layouts/Layout.astro";
 import Tag from "@/components/ui/Tag.astro";
 import { getBlogCollection } from "@/utils/collections";
+import { getLangFromUrl, useTranslations } from "@/i18n/utils";
 
 type Props = {
   article: CollectionEntry<"blog">;
@@ -20,12 +21,16 @@ export async function getStaticPaths({ lang = "fr" }: { lang?: "fr" | "en" }) {
   }));
 }
 
+
 const { article } = Astro.props;
 const { Content } = await render(article);
 
 const { title, publishingDate, tags } = article.data;
 
-const formatedDate = new Date(publishingDate).toLocaleDateString("fr-FR", { year: 'numeric', month: 'long', day: 'numeric' });
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+
+const formatedDate = new Date(publishingDate).toLocaleDateString(`${lang}-${lang.toUpperCase()}`, { year: 'numeric', month: 'long', day: 'numeric' });
 
 ---
 
@@ -35,7 +40,7 @@ const formatedDate = new Date(publishingDate).toLocaleDateString("fr-FR", { year
   metaDescription="TODO : Add a meta description to the articles"
 >
   <h1 class="text-2xl">{title}</h1>
-	<h4 class="text-neutral-500">Publié le {formatedDate}</h4>
+	<h4 class="text-neutral-500">{t("blog.article.dateText")} {formatedDate}</h4>
   <ul class="space-x-2 mt-2">
     {tags.map((tag) => (
       <Tag label={tag} />
