--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -12,8 +12,7 @@ const { experience } = Astro.props as Props;
 const { title, company, companyLogo, companyUrl, description, startDate, endDate, tags } = experience.data;
 
 const displayedStartDate = new Date(startDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
-const displayedEndDate = endDate === 'Présent' ? 'Présent' : new Date(endDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
-
+const displayedEndDate = endDate === 'Present' ? 'Present' : new Date(endDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
 
 ---
 
